--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=bd0b02dc8af981f5b6ac",
+    "/css/app.css": "/css/app.css?id=a46433d110ff6ce186b7"
 }
